Revision history for Perl extension WWW::Scraper::Wikipedia::ISO3166.

1.05  2016-05-10T14:51:00
	- Patch code to match new table formats of Wikipedia pages.
	- Change 'utf8' to 'UTF-8'.
	- Extend populate_countries() to create data/downloaded.countries.txt.
	- Fix a couple of typos in the names of programs listed in the Description.

1.04  2016-05-10T10:34:00
	- Rename t/load.t to t/report.t, and make it run scripts/report.statistics.pl for a real test.
	- Update pre-reqs since t/report.t uses Capture::Tiny.
	- Reformat lines in this file to be <= 100 chars wide, as per my new policy.

1.03  2016-05-10T09:38:00
	- Adopt new repo structure.
	- Replace Hash::FieldHash with Moo and Types::Standard.
	- Change licence from Artistic to Perl.
	- Fix usage of nested L<...L<...>...> link. See RT#114174. Thanx to K. H. Williamson.
	- Fix another link-based typo.
	- Move t/pod.t into xt/author/.
	- Rename CHANGES to Changes as per CPAN::Spec::Changes
	- Change format of dates in this file.

1.02  2013-05-14T13:43:00
	- Make ISO3166.pm a UTF-8 file, to match its use of =encoding utf8.
	- Add scripts/test.nfc.pl.
	- In the FAQ, clarify use of NFC() rather than NFD().
	- Add scripts/get.statoids.pl in case we need their FIPS 10-4 codes one day.
	- Add scripts/get.fips.pages.pl and data/List_of_FIPS_region_codes_*.html.
	- Add scripts/populate.fips.pages.pl, data/wikipedia.fips.codes.txt and
		data/wikipedia.fips.mismatch.log.
	- Update the POD re the new files.
	- Update the pre-reqs.

1.01  2012-05-16T09:50:00
	- Neither code nor data changes made.
	- Update the web page template to include the version #, and links to MetaCPAN.
		This affects data/iso.3166-2.html.
	- Add a new section to the docs: Wikipedia's Terms of Use.

1.00  2012-05-15T15:37:00
	- Original version