@@ -10,6 +10,7 @@ Comments= <<EOT
 - Change 'utf8' to 'UTF-8'.
 - Extend populate_countries() to create data/downloaded.countries.txt.
 - Fix a couple of typos in the names of programs listed in the Description.
+- Switch from File::Slurp to File::Slurper.
 EOT
 
 [V 1.04]
