@@ -26,7 +26,7 @@ requires 'DBIx::Admin::CreateTable' => 2.07;
 requires 'Encode'                   => 2.44;
 requires 'feature'                  => 0,
 requires 'File::ShareDir'           => 1.03;
-requires 'File::Slurp'              => 9999.19;
+requires 'File::Slurper'            => 0.008;
 requires 'File::Spec'               => 3.33;
 requires 'Getopt::Long'             => 2.38;
 requires 'HTML::TreeBuilder'        => 4.2;
